# RGBit

./: .gitignore  CMakeLists.txt  Image_Class.h  Image_Filters.cpp  README.md  assets.qrc  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pre.cpp
Filters/: Image_Class.h  Image_Filters.cpp
